still building out the grid, using flexbox and wraping I am able to create a fixed size grid that is not responsive to window size. Next I am going to use flex-grow and rows of nodes to make the grid responsive.

--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -1,5 +1,8 @@
 .node {
-    border: solid 3px thistle; 
-    width: 25px;
-    height: 25px;
+    --size: 16px;
+    border: solid 2px thistle; 
+    margin: 0;
+    width: var(--size);
+    height: var(--size);
+    /* display: inline-block; */
 }
